--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://marian:Dexter73!@datavid.uofj7hi.mongodb.net/?retryWrites=true&w=majority&appName=Datavid
+MONGO_URI=mongodb+srv://marian:Dexter73!@datavid.uofj7hi.mongodb.net/members?retryWrites=true&w=majority&appName=Datavid
